--- a/1.1有理数的引入.tex
+++ b/1.1有理数的引入.tex
@@ -1,9 +1,10 @@
 % 有理数的引入
 \begin{frame}{1.1 有理数的引入}
-\textbf{正整数、0 和负整数统称为整数(integer), 正分数和负分数统称为分数
-(fraction).\\
+\begin{definition}
+\textbf{正整数、0 和负整数统称为整数(integer), 正分数和负分数统称为分数(fraction).\\
 整数和分数统称为有理数(rational number).}
-\vspace{24pt}
+\end{definition}
+\vspace{12pt}
 \begin{columns}
 \column{0.5\textwidth}
 \[
@@ -44,7 +45,7 @@
 %\draw (A) -- (A2) -- (A21) (A2) -- (A22);
 %\end{tikzpicture}
 \end{columns}
-\vspace{24pt}
+\vspace{12pt}
 \textbf{有限小数和无限循环小数是分数；\\
 无限不循环小数不是分数.}
 \end{frame}
