--- a/七年级上册重点.tex
+++ b/七年级上册重点.tex
@@ -1,5 +1,4 @@
-\documentclass[aspectratio=169]{beamer}
-\usepackage{ctex}
+\documentclass[aspectratio=169]{ctexbeamer}
 \usepackage{tikz}
 \usepackage{pgfplots}
 \usetikzlibrary{calc}
@@ -12,11 +11,12 @@
 \usecolortheme{beaver} %beaver
 \usefonttheme{professionalfonts}
 
-\date{2025年2月9日}
+\date{\today}
 \begin{document}
 \input{1.1有理数的引入}
 \input{1.2数轴}
 \input{1.3相反数}
 \input{1.4绝对值}
+\input{1.5有理数的大小比较}
 
 \end{document}
