--- a/test.tex
+++ b/test.tex
@@ -1,15 +1,19 @@
-\documentclass[aspectratio=169]{beamer}
-\usepackage{ctex}
+\documentclass[aspectratio=169]{ctexbeamer}
 \usepackage{tikz}
 \usepackage{pgfplots}
 \usetikzlibrary{calc}
 \usepackage{amssymb,amsmath}
 \usepackage{enumitem}
 \usepackage{geometry}
-%\geometry{paperwidth=320mm, paperheight=180mm}
-\usetikzlibrary{trees, positioning}
+%\geometry{paperwidth=200mm}
 \pgfplotsset{compat=1.18}
+\usetheme{Madrid} %Madrid，蓝色调为主。
+\usecolortheme{beaver} %beaver
+\usefonttheme{professionalfonts}
 
+\date{\today}
 \begin{document}
+
 \input{1.2数轴}
+
 \end{document}
