--- a/1.5有理数的大小比较.tex
+++ b/1.5有理数的大小比较.tex
@@ -1,4 +1,4 @@
-\begin{frame}{有理数的大小比较规则}
+\begin{frame}{1.5有理数的大小比较规则}
 \begin{block}{有理数大小比较法则}
 \begin{enumerate}[label={\arabic*.}]
   \item 数轴上右边的数比左边的数\alert{大}
