--- a/1.1有理数的引入.tex
+++ b/1.1有理数的引入.tex
@@ -1,8 +1,8 @@
 % 有理数的引入
 \begin{frame}{1.1 有理数的引入}
 \begin{definition}
-\textbf{正整数、0 和负整数统称为整数(integer), 正分数和负分数统称为分数(fraction).\\
-整数和分数统称为有理数(rational number).}
+\textbf{\textcolor{orange}{正整数、0 和负整数统称为整数(integer), 正分数和负分数统称为分数(fraction).\\
+整数和分数统称为有理数(rational number).}}
 \end{definition}
 \vspace{12pt}
 \begin{columns}
