--- a/1.3相反数.tex
+++ b/1.3相反数.tex
@@ -1,7 +1,9 @@
 % 相反数的定义及函数图象
 \begin{frame}{1.3 相反数}
-\textbf{只有正负号不同的两个数称互为相反数(opposite number)。\\
-我们规定: 0 的相反数是0 .}
+\begin{definition}
+\textbf{\textcolor{orange}{只有正负号不同的两个数称互为相反数(opposite number)。\\
+我们规定: 0 的相反数是0 .}}
+\end{definition}
 \begin{columns}
 \column{0.5\textwidth}
 \begin{itemize}
@@ -13,7 +15,7 @@
 \end{itemize}
 
 \column{0.5\textwidth}
-\begin{tikzpicture}[scale=1]
+\begin{tikzpicture}[scale=0.8]
 \begin{axis}[
     axis lines=middle,
     xlabel=$x$, ylabel=$y$,
@@ -32,8 +34,10 @@
 
 % 倒数的定义及函数图象
 \begin{frame}{倒数的定义及函数图象}
-\textbf{乘积为1的两个数互为倒数。\\
-注意：0没有倒数。}
+\begin{definition}
+\textbf{\textcolor{orange}{乘积为1的两个数互为倒数。\\
+注意：0没有倒数。}}
+\end{definition}
 \begin{columns}
 \column{0.5\textwidth}
 \begin{itemize}
@@ -45,7 +49,7 @@
 \end{itemize}
 
 \column{0.5\textwidth}
-\begin{tikzpicture}[scale=1]
+\begin{tikzpicture}[scale=0.8]
 \begin{axis}[
     axis lines=middle,
     xlabel=$x$, ylabel=$y$,
