--- a/1.1有理数的引入.tex
+++ b/1.1有理数的引入.tex
@@ -26,26 +26,43 @@
 \mbox{小数}\begin{cases}
 \mbox{有限小数} \\
 \mbox{无限小数} \begin{cases} 
-\mbox{无限循环} \\
+\mbox{无限循环小数} \\
 \mbox{无限不循环小数}
 \end{cases}
 \end{cases}
 \]
 
-%\begin{tikzpicture}
-%\node (A) at(0,0) {有理数};
-%\node (A1) at(2,1) {整数};
-%\node (A11) at(4,2) {正整数};
-%\node (A12) at(4,1) {0};
-%\node (A13) at(4,0) {负整数};
-%\node (A2) at(2,-1.5) {分数};
-%\node (A21) at(4,-1) {正分数};
-%\node (A22) at(4,-2) {负分数};
-%\draw (A) -- (A1) -- (A11) (A1) -- (A12) (A1) -- (A13);
-%\draw (A) -- (A2) -- (A21) (A2) -- (A22);
-%\end{tikzpicture}
 \end{columns}
 \vspace{12pt}
-\textbf{有限小数和无限循环小数是分数；\\
-无限不循环小数不是分数.}
+\alert{\textbf{0既不是正数，也不是负数，是正数与负数的分界点。}} \\
+\alert{\textbf{有限小数和无限循环小数是分数，无限不循环小数不是分数。}}
+\end{frame}
+
+%有理数集的表示方法
+\begin{frame}{数集与有理数集}
+数集的表示方法【数学A版必修第一册1.1集合的概念】：\\
+集合A是小于10的自然数组成的集合，表示方法如下：\\
+\begin{enumerate}[label={\arabic*.}]
+\item 列举法：$A = \{0, 1, 2, 3, 4, 5, 6, 7, 8, 9\}$
+\item 描述法：$A = \{x \in \mathbb{Z} | 0 \leq x < 10\}$
+\end{enumerate}
+\textbf{\textcolor{orange}{有理数集的表示方法：$Q = \{ x \in \mathbb{R} | x = \dfrac{q}{p}, p,q \in \mathbb{Z}, p \neq 0\} $ }}\\
+数学中常见数集及其记法：\\
+\begin{enumerate}[label={\arabic*.}]
+\item 全体非负整数组成的集合称为非负整数集（或自然数集），记作$\mathbb{N}$.\\
+\item 全体正整数组成的集合称为正整数集，记作$\mathbb{N}^*$或$\mathbb{N}_+$.\\
+\item 全体整数组成的集合称为整数集，记作$\mathbb{Z}$.\\
+\item 全体有理数组成的集合称为有理数集，记作$\mathbb{Q}$.\\
+\item 全体实数组成的集合称为实数集，记作$\mathbb{R}$.\\
+\end{enumerate}
+
+\end{frame}
+
+%思考有理数集的表示方法
+\begin{frame}{思考有理数集的表示方法}
+\textbf{为什么可以下面的方法表示有理数集？ }\\
+\vspace{12pt}
+$Q = \{ x \in \mathbb{R} | x = \dfrac{q}{p}, p,q \in \mathbb{Z}, p \neq 0\} $
+\vspace{5cm}
+
 \end{frame}
