--- a/1.4绝对值.tex
+++ b/1.4绝对值.tex
@@ -1,6 +1,6 @@
 
 \begin{frame}{1.4绝对值}
-\mbox{我们把在数轴上表示数$a$的点与原点的距离叫做数$a$的绝对值, 记作|$a$|.}
+\textbf{\textcolor{orange}{定义：我们把在数轴上表示数$a$的点与原点的距离叫做数$a$的绝对值, 记作|$a$|.}}
 \begin{columns}
 \column{0.45\textwidth}
 \begin{enumerate}[label={\arabic*.}]
