--- a/0.1三会四因五步骤.tex
+++ b/0.1三会四因五步骤.tex
@@ -1,4 +1,6 @@
-\begin{frame}{数学课程的总目标}
+\begin{frame}[t]{数学课程的总目标}
+\begin{spacing}{1.5} %设置1.5倍行距
+{\fontsize{14}{18}\selectfont
 通过义务教育阶段的数学学习，学生逐步：\\
 \begin{enumerate}[label={\arabic*.}]
 \item \textbf{会用数学的眼光观察现实世界；}\\
@@ -6,20 +8,28 @@
 \item \textbf{会用数学的语言表达现实世界。}\\
 \end{enumerate}
 （简称“三会”) 。\\
+}
+\end{spacing}
 \end{frame}
 
-\begin{frame}{数学考试丢分的四大原因}
+\begin{frame}[t]{数学考试丢分的四大原因}
+\begin{spacing}{1.5} %设置1.5倍行距
+{\fontsize{14}{18}\selectfont
 数学考试丢分的四大根本原因：\\
 \begin{enumerate}[label={\arabic*.}]
-\item \textbf{知识点生疏；}\\
-\item \textbf{题型不熟悉；}\\
+\item \textbf{知识点不透彻；}\\
+\item \textbf{题型不熟练；}\\
 \item \textbf{计算不准确；}\\
 \item \textbf{计算速度慢。} \\
 \end{enumerate}
 （简称“四因”) 。
+}
+\end{spacing}
 \end{frame}
 
-\begin{frame}{学好数学的五个步骤}
+\begin{frame}[t]{学好数学的五个步骤}
+\begin{spacing}{1.2} %设置1.2倍行距
+{\fontsize{14}{18}\selectfont
 学好数学的五个步骤：\\
 \begin{enumerate}[label={\arabic*.}]
 \item \textbf{发现个案（发现有趣的个案）；}\\
@@ -30,4 +40,6 @@
 \end{enumerate}
 （简称“五步骤”) 。\\
 \alert{第一步到第三步：大胆假设；第四步：小心求证；第五步：放心应用。}
+}
+\end{spacing}
 \end{frame}
