--- a/1.1有理数的引入.tex
+++ b/1.1有理数的引入.tex
@@ -4,7 +4,6 @@
 \textbf{\textcolor{orange}{正整数、0 和负整数统称为整数(integer), 正分数和负分数统称为分数(fraction).\\
 整数和分数统称为有理数(rational number).}}
 \end{definition}
-\vspace{12pt}
 \begin{columns}
 \column{0.5\textwidth}
 \[
@@ -35,7 +34,22 @@
 \end{columns}
 \vspace{12pt}
 \alert{\textbf{0既不是正数，也不是负数，是正数与负数的分界点。}} \\
-\alert{\textbf{有限小数和无限循环小数是分数，无限不循环小数不是分数。}}
+\alert{\textbf{有限小数和无限循环小数是分数，无限不循环小数不是分数。}} \\
+\textbf{思考：无限不循环小数是什么数？}
+\end{frame}
+
+%小数如何转化为分数
+\begin{frame}{小数如何转化为分数}
+有限小数如何转化为分数：\\
+\[0.245=\dfrac{245}{1000}=\dfrac{49}{200}
+\]
+无限循环小数如何转化为分数？【华东师范大学七年级上册（2024）P73】
+%循环节的小圆点表示\dot{x}
+\begin{align*}
+1000\times 0.\dot{2}4\dot{5} &= 245.\dot{2}4\dot{5} = 245 + 0.\dot{2}4\dot{5} \\
+999 \times 0.\dot{2}4\dot{5} &= 245 \\
+0.\dot{2}4\dot{5} &= \dfrac{245}{999}
+\end{align*}
 \end{frame}
 
 %有理数集的表示方法
