--- a/七年级上册重点.tex
+++ b/七年级上册重点.tex
@@ -1,4 +1,5 @@
 \documentclass[aspectratio=169]{ctexbeamer} %[t]：顶端对齐
+\usepackage{ctex}
 %\setlength{\parindent}{2em} % 设置缩进为2em
 \usepackage{tikz}
 \usetikzlibrary{arrows.meta,calc}
@@ -17,12 +18,13 @@
 \date{\today}
 \begin{document}
 \input{0.1三会四因五步骤}
-\input{1.1有理数的引入}
-\input{1.2数轴}
-\input{1.3相反数}
-\input{1.4绝对值}
-\input{1.5有理数的大小比较}
-\input{1.6有理数的加法}
-\input{1.7有理数的减法}
-\input{1.8有理数的加减混合运算}
+%\input{1.1有理数的引入}
+%\input{1.2数轴}
+%\input{1.3相反数}
+%\input{1.4绝对值}
+%\input{1.5有理数的大小比较}
+%\input{1.6有理数的加法}
+%\input{1.7有理数的减法}
+%\input{1.8有理数的加减混合运算}
+%\input{17.2函数图象}
 \end{document}
