--- a/1.3相反数.tex
+++ b/1.3相反数.tex
@@ -1,4 +1,4 @@
-% 相反数的定义及函数图象
+% 1.3 相反数
 \begin{frame}{1.3 相反数}
 \begin{definition}
 \textbf{\textcolor{orange}{只有正负号不同的两个数称互为相反数(opposite number)。\\
