--- a/0.1三会四因五步骤.tex
+++ b/0.1三会四因五步骤.tex
@@ -1,6 +1,6 @@
 \begin{frame}[t]{数学课程的总目标}
 \begin{spacing}{1.5} %设置1.5倍行距
-{\fontsize{14}{18}\selectfont
+{\Large
 通过义务教育阶段的数学学习，学生逐步：\\
 \begin{enumerate}[label={\arabic*.}]
 \item \textbf{会用数学的眼光观察现实世界；}\\
@@ -13,8 +13,8 @@
 \end{frame}
 
 \begin{frame}[t]{数学考试丢分的四大原因}
-\begin{spacing}{1.5} %设置1.5倍行距
-{\fontsize{14}{18}\selectfont
+\begin{spacing}{1.5} %设置行距
+{\Large
 数学考试丢分的四大根本原因：\\
 \begin{enumerate}[label={\arabic*.}]
 \item \textbf{知识点不透彻；}\\
@@ -22,14 +22,14 @@
 \item \textbf{计算不准确；}\\
 \item \textbf{计算速度慢。} \\
 \end{enumerate}
-（简称“四因”) 。
+（简称“四因”) 。\\
 }
 \end{spacing}
 \end{frame}
 
 \begin{frame}[t]{学好数学的五个步骤}
-\begin{spacing}{1.2} %设置1.2倍行距
-{\fontsize{14}{18}\selectfont
+\begin{spacing}{1.2} %设置行距
+{\Large
 学好数学的五个步骤：\\
 \begin{enumerate}[label={\arabic*.}]
 \item \textbf{发现个案（发现有趣的个案）；}\\
