--- a/1.1有理数的引入.tex
+++ b/1.1有理数的引入.tex
@@ -74,7 +74,7 @@
 
 %思考有理数集的表示方法
 \begin{frame}{思考有理数集的表示方法}
-\textbf{为什么可以下面的方法表示有理数集？ }\\
+\textbf{为什么可以用下面的方法表示有理数集？ }\\
 \vspace{12pt}
 $Q = \{ x \in \mathbb{R} | x = \dfrac{q}{p}, p,q \in \mathbb{Z}, p \neq 0\} $
 \vspace{5cm}
