--- a/1.2数轴.tex
+++ b/1.2数轴.tex
@@ -1,4 +1,4 @@
-% 相反数的定义及函数图象
+% 1.2 数轴
 \begin{frame}{1.2 数轴}
 \begin{definition}
 \textbf{\textcolor{orange}{规定了原点、正方向和单位长度的直线叫做数轴(number axis).} } \\
@@ -11,11 +11,12 @@
     \item \textbf{单位长度}
     \item \textbf{直线（强调三要素的只包括前三条）}
 \end{enumerate}
-\vspace{12pt}
+\vspace{24pt}
 \textbf{\textcolor{blue} {数轴示例：}}
-\vspace{12pt}
+\vspace{24pt}
 \begin{figure}
-\begin{tikzpicture}
+\fontsize{20}{24}\selectfont
+\begin{tikzpicture}[scale=2]
 \draw [black, thick, ->, >=stealth] (-6,0) -- (6,0); 
 \foreach \x in {-5, ..., 5}
 	\draw (\x cm,5pt) -- (\x cm,0pt) node[anchor=north] {$\x$};
@@ -32,8 +33,9 @@
 \textbf{以下图形是不是一个数轴？}
 \vspace{1cm}
 \begin{figure}
-\begin{tikzpicture}
-\draw [black, thick, -stealth] (-6,0) -- (6,0); 
+\fontsize{20}{24}\selectfont
+\begin{tikzpicture}[scale=2]
+\draw [black, thick, -stealth] (-4,0) -- (4,0); 
 \foreach \x in {0, 1}
  	\draw (\x cm,5pt) -- (\x cm,0pt) node[anchor=north] {$\x$};
 \end{tikzpicture} 
@@ -43,6 +45,7 @@
 \begin{frame}{类比思维}
 \textbf{\textcolor{orange}{规定了原点、正方向和单位长度的直线叫做数轴(number axis).} } 
 \begin{figure}
+\fontsize{20}{24}\selectfont
 \begin{tikzpicture}
 
 \coordinate (A) at (-5, 0);
@@ -51,10 +54,10 @@
 \coordinate (D) at (2,0);
 \coordinate (D1) at (5, 0);
 
-\coordinate (E1) at (-5, -1);
-\coordinate (F1) at (5, -1);
-\coordinate (E) at (-2, -1);
-\coordinate (F) at (2, -1);
+\coordinate (E1) at (-5, -2);
+\coordinate (F1) at (5, -2);
+\coordinate (E) at (-2, -2);
+\coordinate (F) at (2, -2);
 \draw [Circle-Circle] (A) node [below] {A} -- node [above =0.1cm] {线段AB} (B) [below] node {B}; %画线段
 %画射线
 \draw [Circle-] (C) node [below] {C} -- node  [above=0.1cm] {射线CD}  (D1);
@@ -70,7 +73,8 @@
 \textbf{射线：射线有一个端点，射线可以向一个方向无限延伸。} \\
 \textbf{直线：直线没有端点，直线可以向两个方向无限延伸。} \\
 \begin{figure}
-\begin{tikzpicture}
+\begin{tikzpicture}[scale=2]
+\fontsize{20}{24}\selectfont
 \draw [black, thick, -stealth] (-6,0) node [left=0.1cm] {$-\infty$} -- (6,0) node [right=0.1cm] {+$\infty$}; 
 \foreach \x in {-5,...,5}
  	\draw (\x cm,5pt) -- (\x cm,0pt) node[anchor=north] {$\x$};
