--- a/1.3相反数.tex
+++ b/1.3相反数.tex
@@ -15,7 +15,8 @@
 \end{itemize}
 
 \column{0.5\textwidth}
-\begin{tikzpicture}[scale=0.8]
+\begin{tikzpicture}[scale=1.8]
+\fontsize{12}{14}\selectfont
 \begin{axis}[
     axis lines=middle,
     xlabel=$x$, ylabel=$y$,
@@ -49,7 +50,8 @@
 \end{itemize}
 
 \column{0.5\textwidth}
-\begin{tikzpicture}[scale=0.8]
+\begin{tikzpicture}[scale=1.8]
+\fontsize{12}{14}\selectfont
 \begin{axis}[
     axis lines=middle,
     xlabel=$x$, ylabel=$y$,
@@ -77,7 +79,8 @@
 \end{itemize}
 
 \column{0.5\textwidth}
-\begin{tikzpicture}[scale=1]
+\begin{tikzpicture}[scale=1.8]
+\fontsize{12}{14}\selectfont
 \begin{axis}[
     axis lines=middle,
     xlabel=$x$, ylabel=$y$,
