--- a/1.5有理数的大小比较.tex
+++ b/1.5有理数的大小比较.tex
@@ -1,3 +1,4 @@
+% 1.5 有理数的代销比较
 \begin{frame}{1.5有理数的大小比较规则}
 \begin{block}{有理数大小比较法则}
 \begin{enumerate}[label={\arabic*.}]
@@ -22,7 +23,8 @@
 \begin{enumerate}[label={\arabic*.}]
   \item 画数轴并标出所有数
   \begin{figure}
-  \begin{tikzpicture}
+  \begin{tikzpicture}[scale=2]
+  \fontsize{16}{20}\selectfont
   \draw [black, thick, ->, >=stealth] (-6,0) -- (6,0); 
   \foreach \x in {-5, ..., 5}
   	\draw (\x cm,5pt) -- (\x cm,0pt) node[anchor=north] {$\x$};
