--- a/1.7有理数的减法.tex
+++ b/1.7有理数的减法.tex
@@ -1,4 +1,11 @@
 \begin{frame}[t]{1.7 有理数的减法}
-有理数的减法法则：
-减去一个数, 等于加上这个数的相反数.
+\begin{spacing}{1.5}
+\Large
+有理数的减法法则：\\
+\begin{enumerate}[label={\arabic*.}]
+\item 减去一个数, 等于加上这个数的相反数.\\
+$ a - b = a + (-b)$ \\
+$ a - (-b) = a + (+b) = a + b$ \\
+\end{enumerate}
+\end{spacing}
 \end{frame}
