--- a/七年级上册重点.tex
+++ b/七年级上册重点.tex
@@ -1,15 +1,6 @@
 \documentclass[aspectratio=169]{ctexbeamer} %[t]：顶端对齐
-\usepackage{ctex}
-%\setlength{\parindent}{2em} % 设置缩进为2em
-\usepackage{tikz}
-\usetikzlibrary{arrows.meta,calc}
-\usepackage{pgfplots}
-\pgfplotsset{compat=1.18} %兼容到1.18版及以下版本的特性
-\usepackage{amssymb,amsmath}
-\usepackage{enumitem}
-\usepackage{setspace} %设置行间距
-\usepackage{geometry}
-%\geometry{paperwidth=320mm, paperheight=180mm}
+\usepackage{universe}
+\uBigPaper
 \usetheme{Madrid} %Madrid，蓝色调为主。
 \usecolortheme{beaver} %beaver
 \usefonttheme{professionalfonts}
@@ -17,14 +8,16 @@
 
 \date{\today}
 \begin{document}
+
 \input{0.1三会四因五步骤}
-%\input{1.1有理数的引入}
-%\input{1.2数轴}
-%\input{1.3相反数}
-%\input{1.4绝对值}
-%\input{1.5有理数的大小比较}
-%\input{1.6有理数的加法}
-%\input{1.7有理数的减法}
-%\input{1.8有理数的加减混合运算}
-%\input{17.2函数图象}
+\input{1.1有理数的引入}
+\input{1.2数轴}
+\input{17.2函数图象}
+\input{1.3相反数}
+\input{1.4绝对值}
+\input{1.5有理数的大小比较}
+\input{1.6有理数的加法}
+\input{1.7有理数的减法}
+\input{1.8有理数的加减混合运算}
+
 \end{document}
