--- a/1.6有理数的加法.tex
+++ b/1.6有理数的加法.tex
@@ -1,39 +1,26 @@
-\begin{frame}[t]{1.6 有理数的加法}
-\begin{spacing}{2} %设置行距
-有理数的加法法则:\\
+\begin{frame}[t]{1.6 有理数的加法法则}
+\begin{spacing}{1.1} %设置行距
+\normalsize
 \begin{enumerate}[label={\arabic*.}]
-\item 同号两数相加, 取与加数相同的正负号, 并把绝对值相加;
-\item 绝对值不相等的异号两数相加, 取绝对值较大的加数的正负号, 并用较大的绝对值减去较小的绝对值;
-\item 互为相反数的两个数相加得0;\item 一个数与0 相加, 仍得这个数.
+\item 同号两数相加, 取与加数相同的正负号, 并把绝对值相加; \\
+$\text{当}a,b  > 0\text{时，}$ \\
+$(+a) + (+b) = +(a+b) = a + b$ \\
+$(-a) + (-b) = -(a+b)$ \\
+\item 绝对值不相等的异号两数相加, 取绝对值较大的加数的正负号, 并用较大的绝对值减去较小的绝对值; \\
+$\text{当}a > b > 0\text{时，}$ \\
+$(-a) + (+b) = -(a-b)$ \\
+$(+a) + (-b) = +(a-b) = a - b$ \\
+\item 互为相反数的两个数相加得0; \\
+ $a + (-a) = 0$ \\
+\item 一个数与0 相加, 仍得这个数. \\
+$a + 0 = 0 $\\
 \end{enumerate}
 \end{spacing}
 \end{frame}
 
-\begin{frame}[t]{例题}
-\begin{columns}
-\column{0.4\textwidth}
-\begin{spacing}{2} %设置行距
-(1) $(+2) + (-11)$; \\(2) $(-12) + (+12)$;\\
-\vspace{6pt}
-(3) $\left(-\dfrac{1}{2}\right)+\left(-\dfrac{2}{3}\right) $; \\
-\vspace{6pt}
-(4) $(-3.4)+4.3$
-\end{spacing}
-\pause
-\column{0.6\textwidth}
-\begin{spacing}{2} %设置行距
-解：\\
-(1) $(+2) + (-11) = -(11-2) = -9$; \\(2) $(-12) + (+12) = 0$;\\
-\vspace{6pt}
-(3) $\left(-\dfrac{1}{2}\right)+\left(-\dfrac{2}{3}\right) = -\left(\dfrac{1}{2} + \dfrac{2}{3}\right) = -1\dfrac{1}{6}$; \\
-\vspace{6pt}
-(4) $(-3.4)+4.3 = +(4.3 - 3.4) = 0.9$
-\end{spacing}
-\end{columns}\end{frame}
-
 \begin{frame}[t]{有理数加法的运算律}
-\begin{spacing}{2} %设置行距
-有理数加法的运算律:\\
+\begin{spacing}{1.5} %设置行距
+\Large
 \begin{enumerate}[label={\arabic*.}]
 \item 加法交换律：两个数相加，交换加数的位置，和不变. \\
 $a + b = b + a$
@@ -43,33 +30,17 @@ $(a + b) + c = a + (b + c)$
 \end{spacing}
 \end{frame}
 
-\begin{frame}[t]{例题}
-\begin{spacing}{1.1} %设置行距
-(1) (+26) + (-18) + 5 + (-16); \\(2) (-1.75) + 1.5 + (+7.3) + (-2.25) + (-8.5). \\
-\pause
-解：\\
-(1) (+26) + (-18) + 5 + (-16) \\
-= (26+5) + [(-18) + (-16)] \\
-= 31 + (-34) \\
-= -(34-31) \\
-= -3. \\
-(2) (-1.75) + 1.5 + (+7.3) + (-2.25) + (-8.5) \\
-= [(- 1.75) + (- 2.25)] + [1.5 + (- 8.5)] + 7.3 \\= (- 4) + (- 7) + 7.3 \\= (- 4) + [(- 7) + 7.3] \\= (- 4) + 0.3 \\= - 3.7.
-\end{spacing}
-\end{frame}
-
-\begin{frame}[t]{例题又解：能去掉的正号或加号都去掉}
-\begin{spacing}{1.1} %设置行距
-(1) (+26) + (-18) + 5 + (-16); \\(2) (-1.75) + 1.5 + (+7.3) + (-2.25) + (-8.5). \\
-\pause
-解：\\
-(1) (+26) + (-18) + 5 + (-16) \\
-= 26 + 5 - 18 - 16 \\
-= 26 - 16 + 5 - 18 \\
-= 10 + 5 - 10 - 8 \\
-= 5 - 8 \\
-= -3. \\
-(2) (-1.75) + 1.5 + (+7.3) + (-2.25) + (-8.5) \\
-= 1.5 + 7.3 - (1.75 + 2.25 + 8.5) \\= 8.8 - 12.5\\= -(12.5 - 8.8)\\= - 3.7.
+\begin{frame}[t]{有理数去括号规则}
+\begin{spacing}{1.5} %设置行距
+\Large
+括号前的符号与数字前的符号存在下列关系，则：\\
+\begin{enumerate}[label={\arabic*.}]
+\item 同号去括号取正号 \\
+$+(+a) = +a = a$ \\
+$-(-a) = +a = a$ \\
+\item 异号去括号取负号\\
+$-(+a) = -a$ \\
+$+(-a) = -a$ \\
+\end{enumerate}
 \end{spacing}
 \end{frame}
