--- a/七年级上册重点.tex
+++ b/七年级上册重点.tex
@@ -1,5 +1,5 @@
 \documentclass[aspectratio=169]{ctexbeamer} %[t]：顶端对齐
-\usepackage{universe}
+\usepackage{../graph/universe}
 \uBigPaper
 \usetheme{Madrid} %Madrid，蓝色调为主。
 \usecolortheme{beaver} %beaver
