--- a/1.4绝对值.tex
+++ b/1.4绝对值.tex
@@ -3,7 +3,7 @@
 \usecolortheme{beaver} %beaver
 \usefonttheme{professionalfonts}
 
-\usepackage{../universe}
+\usepackage{universe}
 \uBigPaper
 
 \date{\today}
@@ -38,7 +38,7 @@
 
 \begin{figure}
 \centering
-\scalebox{1.8}{\subfile{../fig/绝对值}}
+\scalebox{1.8}{\subfile{fig/绝对值}}
 \end{figure}
 
 \end{columns}
@@ -52,7 +52,7 @@
 \textbf{绝对值的函数图象} \\
 \begin{figure}
 \centering
-\scalebox{1.8}{\subfile{../fig/绝对值}}
+\scalebox{1.8}{\subfile{fig/绝对值}}
 \end{figure}
 
 %相反数函数图象
@@ -60,7 +60,7 @@
 \textbf{相反数的函数图象} \\
 \begin{figure}
 \centering
-\scalebox{1.8}{\subfile{../fig/相反数}}
+\scalebox{1.8}{\subfile{fig/相反数}}
 \end{figure}
 
 \end{columns}
