--- a/1.6有理数的加法.tex
+++ b/1.6有理数的加法.tex
@@ -3,7 +3,7 @@
 \usecolortheme{beaver} %beaver
 \usefonttheme{professionalfonts}
 
-\usepackage{../universe}
+\usepackage{universe}
 \uBigPaper
 
 \date{\today}
@@ -42,14 +42,14 @@ $(a + b) + c = a + (b + c)$
 \end{frame}
 
 \begin{frame}[t]{有理数去括号规则}
-\begin{spacing}{1.5} %设置行距
+\begin{spacing}{1.2} %设置行距
 \Large
-括号前的符号与数字前的符号存在下列关系，则：\\
+括号前的符号与数字前的符号存在下列关系，则：
 \begin{enumerate}[label={\arabic*.}]
-\item 同号去括号取正号 \\
+\item 同号取正（去括号，取正号） \\
 $+(+a) = +a = a$ \\
-$-(-a) = +a = a$ \\
-\item 异号去括号取负号\\
+$-(-a) = +a = a$ 
+\item 异号取负（去括号，取负号）\\
 $-(+a) = -a$ \\
 $+(-a) = -a$ \\
 \end{enumerate}
