--- a/universe.sty
+++ b/universe.sty
@@ -7,13 +7,12 @@
 \RequirePackage{hyperref} % 用于创建超链接
 \usepackage{ifthen}  % 用于检查可选参数是否存在
 \RequirePackage{listings} % 语法高亮
-\usepackage{minted} % 语法高亮
 \RequirePackage{pgfplots}
 \RequirePackage{setspace} % 设置行间距
 \RequirePackage{tikz} % 引入 TikZ 包
 \RequirePackage{verbatim}
 \RequirePackage{xcolor}
-
+\usepackage{minted} % 语法高亮
 \RequirePackage{subfiles}
 
 % 使用 TikZ 库
@@ -116,4 +115,4 @@
 }
 
 % 全局设置
-\uSetMinted
+%\uSetMinted
