--- a/七年级上册.tex
+++ b/七年级上册.tex
@@ -9,15 +9,15 @@
 \date{\today}
 \begin{document}
 
-\subfile{chapter/0.1三会四因五步骤}
-\subfile{chapter/1.1有理数的引入}
-\subfile{chapter/1.2数轴}
-\subfile{chapter/17.2函数图象}
-\subfile{chapter/1.3相反数}
-\subfile{chapter/1.4绝对值}
-\subfile{chapter/1.5有理数的大小比较}
-\subfile{chapter/1.6有理数的加法}
-\subfile{chapter/1.7有理数的减法}
-\subfile{chapter/1.8有理数的加减混合运算}
+\subfile{0.1三会四因五步骤}
+\subfile{1.1有理数的引入}
+\subfile{1.2数轴}
+\subfile{17.2函数图象}
+\subfile{1.3相反数}
+\subfile{1.4绝对值}
+\subfile{1.5有理数的大小比较}
+\subfile{1.6有理数的加法}
+\subfile{1.7有理数的减法}
+\subfile{1.8有理数的加减混合运算}
 
 \end{document}
