--- a/1.1有理数的引入.tex
+++ b/1.1有理数的引入.tex
@@ -3,7 +3,7 @@
 \usecolortheme{beaver} %beaver
 \usefonttheme{professionalfonts}
 
-\usepackage{../universe}
+\usepackage{universe}
 \uBigPaper
 
 \date{\today}
