--- a/1.3相反数.tex
+++ b/1.3相反数.tex
@@ -3,7 +3,7 @@
 \usecolortheme{beaver} %beaver
 \usefonttheme{professionalfonts}
 
-\usepackage{../universe}
+\usepackage{universe}
 \uBigPaper
 
 \date{\today}
@@ -29,7 +29,7 @@
 
 \begin{figure}
 \centering
-\scalebox{1.8}{\subfile{../fig/相反数}}
+\scalebox{1.8}{\subfile{fig/相反数}}
 \end{figure}
 
 \end{columns}
@@ -54,7 +54,7 @@
 \column{0.5\textwidth}
 \begin{figure}
 \centering
-\scalebox{1.8}{\subfile{../fig/倒数}}
+\scalebox{1.8}{\subfile{fig/倒数}}
 \end{figure}
 \end{columns}
 \end{frame}
@@ -72,7 +72,7 @@
 \column{0.5\textwidth}
 \begin{figure}
 \centering
-\scalebox{1.8}{\subfile{../fig/相反数与倒数}}
+\scalebox{1.8}{\subfile{fig/相反数与倒数}}
 \end{figure}
 \end{columns}
 \end{frame}
