--- a/1.7有理数的减法.tex
+++ b/1.7有理数的减法.tex
@@ -3,7 +3,7 @@
 \usecolortheme{beaver} %beaver
 \usefonttheme{professionalfonts}
 
-\usepackage{../universe}
+\usepackage{universe}
 \uBigPaper
 
 \date{\today}
